syntax = "proto3";

package com.github.bsideup.liiklus;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_package = "com.github.bsideup.liiklus.protocol";
option optimize_for = SPEED;
option java_multiple_files = true;

service LiiklusService {
    rpc Publish(PublishRequest) returns (PublishReply) {

    }

    rpc Subscribe (SubscribeRequest) returns (stream SubscribeReply) {
    }

    rpc Receive (ReceiveRequest) returns (stream ReceiveReply) {

    }

    rpc Ack (AckRequest) returns (google.protobuf.Empty) {

    }
}

message PublishRequest {
    string topic = 1;

    bytes key = 2;

    bytes value = 3;
}

message PublishReply {

}

message SubscribeRequest {

    string topic = 1;

    string group = 2;

    AutoOffsetReset autoOffsetReset = 3;

    enum AutoOffsetReset {
        EARLIEST = 0;
        LATEST = 1;
    }
}

message SubscribeReply {
    oneof reply {
        Assignment assignment = 1;
    }

    message Assignment {
        uint32 partition = 1;
    }
}

message AckRequest {
    string topic = 1;

    string group = 2;

    uint32 partition = 3;

    uint64 offset = 4;
}

message ReceiveRequest {
    string topic = 1;

    string group = 2;

    uint32 partition = 3;

    uint64 lastKnownOffset = 4;
}

message ReceiveReply {
    oneof reply {
        Record record = 1;
    }

    message Record {
        uint64 offset = 1;

        bytes key = 2;

        bytes value = 3;

        google.protobuf.Timestamp timestamp = 4;
    }
}